fix overflow & scrollbar issue on filetree again

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,11 @@
+* { scrollbar-width: none; }
+
+::-webkit-scrollbar { display: none; }
+
 .hextra-filetree .inline-block {
 	width: 100%;
-}
+	overflow-x: auto; }
+
+.hextra-filetree span {
+	white-space: nowrap;
+	white-space: -moz-pre-wrap; }
